content-source/yaml-walkthroughs/cc/09-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-strip-prefix
  labels:
    app: foreverhome
spec:
  stripPrefix:
    prefixes:
      - /api
