content-source/yaml-walkthroughs/cc/06-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: felis
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: felis
      component: frontend
  template:
    metadata:
      labels:
        app: felis
        component: frontend
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: frontend
          image: registry.chas-lab.dev/chas-challenge-2026/grupp-10/grupp-10-cc-2026/frontend:latest
          ports:
            - containerPort: 5173
          livenessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5173
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
