content-source/yaml-walkthroughs/cc/03-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: felis
    component: backend
spec:
  selector:
    app: felis
    component: backend
  ports:
    - port: 80
      targetPort: 5158
      protocol: TCP
  type: ClusterIP
