content-source/yaml-walkthroughs/cc/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: felis
    component: frontend
spec:
  selector:
    app: felis
    component: frontend
  ports:
    - port: 80
      targetPort: 5173
      protocol: TCP
  type: ClusterIP
