content-source/yaml-walkthroughs/cc/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: felis
  labels:
    app: felis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: doe25-said-ebadi-api-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: felis-doe25-said.labb.k3s.chas-lab.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
